# rm_hotpot_exam

./: .gitignore  .pre-commit-config.yaml  README.md
Folder_1_Cpp/: cpp_exam_readme.md  random_operations  random_operations.cpp
Folder_2_Ros/: ros_exam_instruction.md  表明配置了代码提示.webm
Folder_2_Ros/Au_miner/install/: local_setup.sh  setup.sh
Folder_2_Ros/Au_miner/install/au_interfaces/share/au_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Folder_2_Ros/Au_miner/install/au_interfaces/share/au_interfaces/action/: Mineral.action  Mineral.idl
Folder_2_Ros/Au_miner/install/au_interfaces/share/au_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  au_interfacesConfig.cmake  au_interfaces__rosidl_typesupport_cExport-noconfig.cmake  au_interfaces__rosidl_typesupport_cExport.cmake  au_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  au_interfaces__rosidl_typesupport_cppExport.cmake  au_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  au_interfaces__rosidl_typesupport_introspection_cExport.cmake  au_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  au_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_au_interfaces__rosidl_generator_cExport-noconfig.cmake  export_au_interfaces__rosidl_generator_cExport.cmake  rosidl_cmake-extras.cmake  (+9 more)
Folder_2_Ros/Au_miner/log/: latest_build  latest_list
Folder_2_Ros/Au_miner/src/au_interfaces/: CMakeLists.txt  package.xml
Folder_2_Ros/Au_miner/src/au_interfaces/msg/: Mineralsingle.msg
Folder_2_Ros/Au_miner/src/au_mine/: CMakeLists.txt  package.xml
Folder_2_Ros/Au_miner/src/au_mine/src/: au_miner.cpp  au_world.cpp
Folder_2_Ros/golden_miner/install/: local_setup.sh  setup.sh
Folder_2_Ros/golden_miner/install/mineral_interfaces/share/mineral_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Folder_2_Ros/golden_miner/log/: latest_build
Folder_2_Ros/golden_miner/src/golden_world/: CMakeLists.txt  package.xml
Folder_2_Ros/golden_miner/src/golden_world/config/: config.yaml  ros_exam.rviz
Folder_2_Ros/golden_miner/src/golden_world/launch/: _launch.py  ros_exam.rviz
Folder_2_Ros/golden_miner/src/golden_world/src/: golden_world_node.cpp  miner_node.cpp
Folder_2_Ros/golden_miner/src/mineral_interfaces/: CMakeLists.txt  package.xml
Folder_2_Ros/golden_miner/src/mineral_interfaces/msg/: Mineral.msg  MineralArray.msg
Folder_2_Ros/golden_miner/src/mineral_interfaces/srv/: Fetch.srv
Folder_2_Ros/golden_miner/src/mineral_interfaces/srv/install/: local_setup.sh  setup.sh
Folder_2_Ros/golden_miner/src/mineral_interfaces/srv/log/: latest_build
Folder_3_Transform/: tf_test_instruction.md
Folder_3_Transform/exam_3_3/src/hero_description/launch/: view_model.launch.py
Folder_3_Transform/exam_3_3/src/tf_exam/: CMakeLists.txt  package.xml
Folder_3_Transform/exam_3_3/src/tf_exam/src/: exam_3_3_1.cpp  exam_3_3_2.cpp
Folder_4_Opencv/: README.md  log.txt  main.py  prepross.py  pyproject.toml
Folder_4_Opencv/code/: 20230828104307.txt  main.py  predict.py  prepross.py
Folder_4_Opencv/code_cpp/: CMakeLists.txt  main.cpp  predict.cpp  predict.h  preprocess.cpp  preprocess.h
Folder_4_Opencv/src/: fit.csv  move_info.csv  speed_dict.csv  work.py
Folder_5_Simulate/: README.md  键盘控制.webm
Folder_5_Simulate/simulate_exam/src/search_color/: CMakeLists.txt  package.xml
Folder_5_Simulate/simulate_exam/src/search_color/launch/: _launch.py  launch.py
Folder_5_Simulate/simulate_exam/src/search_color/src/: exam_world.sdf  search_color.cpp  transport_camera.cpp
Folder_6_KalmanFilter/: KalmanFilter.py  README.md  base_exam.py  extend_exam.py  extend_exam_nt.py  extend_exam_t.py
Folder_7_YOLO/: RM第二轮考核_能量机关识别部分记录.md
Folder_7_YOLO/YOLOv8/: convert_dataset.py  razor_video.py
Folder_7_YOLO/YOLOv8/train2/: args.yaml  results.csv
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
docs/rmhotpot/: README.md  RM第二轮考核_能量机关识别部分记录.md  cpp_exam_readme.md  exam_4.md  extra_readme.md  ros_exam_instruction.md  simulate.md  tf_test_instruction.md
(+80 files in other folders)
