[tool.poetry]
name = "opencv-test"
version = "0.1.0"
description = "A package for opencv test"
authors = ["zhaocake <zy9787101052763@126.com>"]
readme = "README.md"
packages = [{include = "opencv_test"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
scipy = "^1.7"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
